--- a/www/templates/tab-maps.html
+++ b/www/templates/tab-maps.html
@@ -1,6 +1,6 @@
-<ion-view view-title="Maps">
+<ion-view ng-controller = 'MapsCtrl as maps' view-title="Maps">
   <ion-content>
     <div id="map"></div>
-    <button ion-button ng-click="openTab(1)">Open Tab 1</button>
+    <button ion-button ng-click="testTab()">Open Tab 1</button>
   </ion-content>
 </ion-view>
