--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -3,7 +3,7 @@ Create tabs with an icon and label, using the tabs-positive style.
 Each tab's child <ion-nav-view> directive will have its own
 navigation history that also transitions its views in and out.
 -->
-<ion-tabs class="tabs-icon-top tabs-color-active-positive">
+<ion-tabs ng-controller="TabsCtrl" class="tabs-icon-top tabs-color-active-positive">
 
   <!-- Dashboard Tab -->
   <ion-tab title="Status" icon-off="ion-ios-pulse" icon-on="ion-ios-pulse-strong" href="#/tab/dash">
@@ -24,5 +24,5 @@ navigation history that also transitions its views in and out.
   <ion-tab title="Maps" icon-off="ion-map" icon-on="ion-map" href="#/tab/maps">
     <ion-nav-view name="tab-maps"></ion-nav-view>
   </ion-tab>
-  
+
 </ion-tabs>
